src/objects/ProcNotiOppNoAten__c.object
<CustomObject>
    <description>Objeto que se usa para habilitar un trigger que levante los procesos cada 15 minutos.</description>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horario__c</fullName>
        <label>Horario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matutino</fullName>
                </value>
                <value>
                    <fullName>Vespertino</fullName>
                </value>
                <value>
                    <fullName>A los</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minutos__c</fullName>
        <label>Minutos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proceso__c</fullName>
        <label>Proceso</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ProcNotiOppNoAten</label>
    <nameField>
        <displayFormat>PNOA-{00000}</displayFormat>
        <label>Nombre de ProcNotiOppNoAten</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProcNotiOppNoAten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>